--- a/src/style/_nav.scss
+++ b/src/style/_nav.scss
@@ -17,6 +17,7 @@ nav {
     margin: 0 auto;
     width: 50%;
     li {
+      border-bottom: 1px solid $background; // fall-back
       border-bottom: 1px solid rgba(270, 270, 270, 0);
       display: flex;
       flex-direction: column;
@@ -36,9 +37,11 @@ nav {
 }
 
 .nav-up {
+  border-bottom: 1px solid $background; // fall-back
   border-bottom: 1px solid rgba(270, 270, 270, 0);
 }
 
 .nav-down {
+  border-bottom: 1px solid rgb(270, 270, 270); // fall-back
   border-bottom: 1px solid rgba(270, 270, 270, 0.2);
 }
